# cehcom

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  amo.py
app/core/: config.py  db.py  logger.py  middleware.py
app/crud/: __init__.py  _crud.py  lead.py  lead_item.py
app/crud/models/: lead.py  lead_item.py  mixin.py
app/crud/schemas/: __init__.py  lead.py  lead_item.py
app/job/: sync.py
app/repository/: amocrm.py  notion.py  tgbot.py  wordpress.py
app/schemas/: __init__.py  amo.py  api.py  lead.py  notion.py  product.py
app/services/: __init__.py  amocrm.py  base.py  notion.py
app/utils/: __init__.py  cache.py  file_storage.py
nginx/conf/: default.conf
