[tool.poetry]
name = "cehcom"
version = "0.1.0"
description = ""
authors = ["lzycodr <muhitdinov.a3@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.1"
errors = {git = "https://bitbucket.org/danametrics/errors", rev = "v1.0.26"}
requests = "^2.32.3"
notion-client = "^2.2.1"
fastapi-utilities = "^0.2.0"
pytz = "^2024.1"
redis = "^5.0.8"
pytelegrambotapi = "^4.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
